2002-01-23  Per Bothner  <per@bothner.com>

	* AppendValues.java:  Removed - moved to gnu.kawa.functions.
	* Makefile.am:  Update accordingly.

2002-01-21  Per Bothner  <per@bothner.com>

	* Document.java:  Moved to gnu.kawa.xml.

	* Document.java (document):  New static methods.
	(apply):  Use one of the new methods.

2002-01-07  Per Bothner  <per@bothner.com>

	* Document.java (makeURL):  New helper method.
	(apply(CallContext)):  New method, send directly to Consumer.

	* NamedChildren.java (compile):  Optimize if ConsumeTarget.

	* ValuesFilter.java (matches):  Handle a TreeList.

	* XMLFormat.java (format):  New method.

2002-01-02  Per Bothner  <per@bothner.com>

	* NumberValue.java:  New class, extends Procedure1.
	* Makefile.am (java_sources):  Add NumberValue.java.

2001-12-24  Per Bothner  <per@bothner.com>

	* ElementType.java:  New class, extends NodeType, implements TypeValue.
	* ItemAt.java:  New class, extends Proecdure2.
	* SubList.java:  New class, extends CpsProcedure.
	* Makefile.am (java_sources):  Add new classes.

	* Document.java (document):  Reverse incorrect isLetter test.

2001-11-24  Per Bothner  <per@bothner.com>

	* MakeElement.java (beginGroup, endGroup):  Switch argument order.
	(inline):  Use Expressions's setLine to set line number info.

	* NamedChildren.java (compile):  Also optimize ConsumerTarget.
	(getPropertyName, getNamedProperty):  New methods.
	(namedChildren, getNamaedChild, gotoNext, gotoFirstChild):  Add
	support for getting named properties from beans e.g. $request/method.
	* NodeType.java (coerce):  Handle arbitrary value.

2001-11-18  Per Bothner  <per@bothner.com>

	* Document.java (document, apply1): Specific that it throws Throwable,
	thus we no longer have to wrap exceptions.

	* AppendValues.java (compile):  Use compileWithPosition.

2001-11-12  Per Bothner  <per@bothner.com>

	* Document.java (document):  Filter through NamespaceResolver.
	
	* NamedChildren.java (namedChildren):  Use getNamedChild method.
