@@ -1,3 +1,10 @@
+2002-02-05  Per Bothner  <per@bothner.com>
+
+	* ElementType.java:  Moved to gnu.kawa.xml.
+	* NamedChildren.java:  Moved to gnu.kawa.xml.
+	* NodeType.java:  Moved to gnu.kawa.xml.
+	* Makefile.am:  Update accordingly.
+
 2002-01-23  Per Bothner  <per@bothner.com>
 
 	* AppendValues.java:  Removed - moved to gnu.kawa.functions.
